// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses fcpxml 1.9 1`] = `
[
  {
    "end": 13.84,
    "start": 0,
  },
  {
    "end": 25.04,
    "start": 13.84,
  },
  {
    "end": 25.2,
    "start": 25.04,
  },
  {
    "end": 55.44,
    "start": 25.2,
  },
  {
    "end": 68.96,
    "start": 55.44,
  },
  {
    "end": 81.83999999999999,
    "start": 68.96,
  },
  {
    "end": 95.12,
    "start": 81.84,
  },
  {
    "end": 95.16000000000001,
    "start": 95.12,
  },
  {
    "end": 95.28,
    "start": 95.16,
  },
  {
    "end": 112.72,
    "start": 95.28,
  },
  {
    "end": 140.4,
    "start": 112.72,
  },
  {
    "end": 147.36,
    "start": 140.4,
  },
  {
    "end": 170.88000000000002,
    "start": 147.36,
  },
  {
    "end": 176.72,
    "start": 170.88,
  },
  {
    "end": 196.07999999999998,
    "start": 176.72,
  },
  {
    "end": 232.96,
    "start": 196.08,
  },
  {
    "end": 265.92,
    "start": 232.96,
  },
  {
    "end": 281.76,
    "start": 265.92,
  },
  {
    "end": 308.96,
    "start": 281.76,
  },
  {
    "end": 321.68,
    "start": 308.96,
  },
  {
    "end": 353.2,
    "start": 321.68,
  },
  {
    "end": 376.08,
    "start": 353.2,
  },
  {
    "end": 405.68,
    "start": 376.08,
  },
  {
    "end": 412.16,
    "start": 405.68,
  },
  {
    "end": 423.28000000000003,
    "start": 412.16,
  },
  {
    "end": 430.71999999999997,
    "start": 423.28,
  },
  {
    "end": 439.76000000000005,
    "start": 430.72,
  },
  {
    "end": 456.64,
    "start": 439.76,
  },
  {
    "end": 492.71999999999997,
    "start": 456.64,
  },
  {
    "end": 511.44000000000005,
    "start": 492.72,
  },
  {
    "end": 522.24,
    "start": 511.44,
  },
  {
    "end": 524.32,
    "start": 522.24,
  },
  {
    "end": 543.2800000000001,
    "start": 524.32,
  },
  {
    "end": 571.04,
    "start": 543.28,
  },
  {
    "end": 576.3199999999999,
    "start": 571.04,
  },
  {
    "end": 612.48,
    "start": 576.32,
  },
  {
    "end": 626.16,
    "start": 612.48,
  },
  {
    "end": 626.24,
    "start": 626.16,
  },
  {
    "end": 665.04,
    "start": 626.24,
  },
  {
    "end": 694.0799999999999,
    "start": 665.04,
  },
  {
    "end": 762.96,
    "start": 694.08,
  },
  {
    "end": 784.8000000000001,
    "start": 762.96,
  },
  {
    "end": 804.56,
    "start": 784.8,
  },
  {
    "end": 813.52,
    "start": 804.56,
  },
  {
    "end": 831.16,
    "start": 813.52,
  },
  {
    "end": 928.72,
    "start": 831.16,
  },
  {
    "end": 941.0400000000001,
    "start": 928.72,
  },
  {
    "end": 946.3199999999999,
    "start": 941.04,
  },
  {
    "end": 968.8000000000001,
    "start": 946.32,
  },
  {
    "end": 982.16,
    "start": 968.8,
  },
  {
    "end": 1111.2,
    "start": 982.16,
  },
  {
    "end": 1117.04,
    "start": 1111.2,
  },
  {
    "end": 1142.6,
    "start": 1117.04,
  },
  {
    "end": 1142.6399999999999,
    "start": 1142.6,
  },
  {
    "end": 1142.68,
    "start": 1142.64,
  },
  {
    "end": 1180.88,
    "start": 1142.68,
  },
  {
    "end": 1193.2,
    "start": 1180.88,
  },
  {
    "end": 1212.72,
    "start": 1193.2,
  },
  {
    "end": 1233.68,
    "start": 1212.72,
  },
  {
    "end": 1263.76,
    "start": 1233.68,
  },
  {
    "end": 1288.56,
    "start": 1263.76,
  },
  {
    "end": 1294.12,
    "start": 1288.56,
  },
  {
    "end": 1294.1599999999999,
    "start": 1294.12,
  },
  {
    "end": 1294.2,
    "start": 1294.16,
  },
  {
    "end": 1294.24,
    "start": 1294.2,
  },
  {
    "end": 1294.28,
    "start": 1294.24,
  },
  {
    "end": 1294.36,
    "start": 1294.28,
  },
  {
    "end": 1294.4399999999998,
    "start": 1294.36,
  },
  {
    "end": 1294.48,
    "start": 1294.44,
  },
  {
    "end": 1306.84,
    "start": 1294.48,
  },
  {
    "end": 1306.8799999999999,
    "start": 1306.84,
  },
  {
    "end": 1306.92,
    "start": 1306.88,
  },
  {
    "end": 1306.96,
    "start": 1306.92,
  },
  {
    "end": 1339.04,
    "start": 1306.96,
  },
  {
    "end": 1360.24,
    "start": 1339.04,
  },
  {
    "end": 1365.92,
    "start": 1360.24,
  },
  {
    "end": 1382.88,
    "start": 1365.92,
  },
  {
    "end": 1402.0800000000002,
    "start": 1382.88,
  },
  {
    "end": 1417.52,
    "start": 1402.08,
  },
  {
    "end": 1428.16,
    "start": 1417.52,
  },
  {
    "end": 1480.0800000000002,
    "start": 1428.16,
  },
  {
    "end": 1496.24,
    "start": 1480.08,
  },
  {
    "end": 1526.64,
    "start": 1496.24,
  },
  {
    "end": 1532.24,
    "start": 1526.64,
  },
  {
    "end": 1542.24,
    "start": 1532.24,
  },
  {
    "end": 1554.32,
    "start": 1542.24,
  },
  {
    "end": 1565.12,
    "start": 1554.32,
  },
  {
    "end": 1595.4399999999998,
    "start": 1565.12,
  },
  {
    "end": 1602.3200000000002,
    "start": 1595.44,
  },
  {
    "end": 1612.32,
    "start": 1602.32,
  },
  {
    "end": 1648.24,
    "start": 1612.32,
  },
  {
    "end": 1667.76,
    "start": 1648.24,
  },
  {
    "end": 1691.92,
    "start": 1667.76,
  },
  {
    "end": 1705.76,
    "start": 1691.92,
  },
  {
    "end": 1711.12,
    "start": 1705.76,
  },
  {
    "end": 1727,
    "start": 1711.12,
  },
  {
    "end": 1750,
    "start": 1727,
  },
  {
    "end": 1778,
    "start": 1750,
  },
  {
    "end": 1787.6,
    "start": 1778,
  },
  {
    "end": 1794.9599999999998,
    "start": 1787.6,
  },
  {
    "end": 1836.32,
    "start": 1794.96,
  },
  {
    "end": 1905.84,
    "start": 1836.32,
  },
  {
    "end": 1905.8799999999999,
    "start": 1905.84,
  },
  {
    "end": 1909.1200000000001,
    "start": 1905.88,
  },
  {
    "end": 1936.56,
    "start": 1909.12,
  },
  {
    "end": 1941.84,
    "start": 1936.56,
  },
  {
    "end": 1954.48,
    "start": 1941.84,
  },
  {
    "end": 1968.24,
    "start": 1954.48,
  },
  {
    "end": 1972,
    "start": 1968.24,
  },
  {
    "end": 1982.56,
    "start": 1972,
  },
  {
    "end": 1994.56,
    "start": 1982.56,
  },
  {
    "end": 1997.12,
    "start": 1994.56,
  },
  {
    "end": 2164.3599999999997,
    "start": 1997.12,
  },
  {
    "end": 2180.4,
    "start": 2164.36,
  },
  {
    "end": 2199.28,
    "start": 2180.4,
  },
  {
    "end": 2212,
    "start": 2199.28,
  },
  {
    "end": 2237.76,
    "start": 2212,
  },
  {
    "end": 2316.88,
    "start": 2237.76,
  },
  {
    "end": 2332.2400000000002,
    "start": 2316.88,
  },
  {
    "end": 2412.64,
    "start": 2332.24,
  },
  {
    "end": 2672.56,
    "start": 2412.64,
  },
  {
    "end": 2723.24,
    "start": 2672.56,
  },
  {
    "end": 2723.2799999999997,
    "start": 2723.24,
  },
  {
    "end": 2723.36,
    "start": 2723.28,
  },
  {
    "end": 2723.4,
    "start": 2723.36,
  },
  {
    "end": 2725.04,
    "start": 2723.4,
  },
  {
    "end": 2725.08,
    "start": 2725.04,
  },
  {
    "end": 2725.12,
    "start": 2725.08,
  },
  {
    "end": 2725.44,
    "start": 2725.12,
  },
  {
    "end": 2787.2000000000003,
    "start": 2725.44,
  },
  {
    "end": 2806.56,
    "start": 2787.2,
  },
  {
    "end": 2814.56,
    "start": 2806.56,
  },
  {
    "end": 2852.4,
    "start": 2814.56,
  },
  {
    "end": 2864.8,
    "start": 2852.4,
  },
  {
    "end": 2875.28,
    "start": 2864.8,
  },
  {
    "end": 2886.6400000000003,
    "start": 2875.28,
  },
  {
    "end": 2898.3199999999997,
    "start": 2886.64,
  },
  {
    "end": 2942.2400000000002,
    "start": 2898.32,
  },
  {
    "end": 2996,
    "start": 2942.24,
  },
  {
    "end": 3000.88,
    "start": 2996,
  },
  {
    "end": 3026.6400000000003,
    "start": 3000.88,
  },
  {
    "end": 3055.92,
    "start": 3026.64,
  },
  {
    "end": 3062.7200000000003,
    "start": 3055.92,
  },
  {
    "end": 3088.8799999999997,
    "start": 3062.72,
  },
  {
    "end": 3095.76,
    "start": 3088.88,
  },
  {
    "end": 3111.36,
    "start": 3095.76,
  },
  {
    "end": 3118.1600000000003,
    "start": 3111.36,
  },
  {
    "end": 3125.8399999999997,
    "start": 3118.16,
  },
  {
    "end": 3131.28,
    "start": 3125.84,
  },
  {
    "end": 3139.28,
    "start": 3131.28,
  },
  {
    "end": 3174.1600000000003,
    "start": 3139.28,
  },
  {
    "end": 3177.68,
    "start": 3174.16,
  },
  {
    "end": 3177.72,
    "start": 3177.68,
  },
  {
    "end": 3193.12,
    "start": 3177.72,
  },
  {
    "end": 3218.24,
    "start": 3193.12,
  },
  {
    "end": 3235.7599999999998,
    "start": 3218.24,
  },
  {
    "end": 3250,
    "start": 3235.76,
  },
  {
    "end": 3263.76,
    "start": 3250,
  },
  {
    "end": 3267.28,
    "start": 3263.76,
  },
  {
    "end": 3272.96,
    "start": 3267.28,
  },
  {
    "end": 3335.92,
    "start": 3272.96,
  },
  {
    "end": 3499.76,
    "start": 3335.92,
  },
  {
    "end": 3640.7200000000003,
    "start": 3499.76,
  },
  {
    "end": 3655.9599999999996,
    "start": 3640.72,
  },
  {
    "end": 3656.04,
    "start": 3655.96,
  },
  {
    "end": 3668.16,
    "start": 3656.04,
  },
  {
    "end": 3744.7999999999997,
    "start": 3668.16,
  },
  {
    "end": 3770.8,
    "start": 3744.8,
  },
  {
    "end": 3783.6000000000004,
    "start": 3770.8,
  },
  {
    "end": 3793.68,
    "start": 3783.6,
  },
  {
    "end": 3814.64,
    "start": 3793.68,
  },
  {
    "end": 3835.04,
    "start": 3814.64,
  },
  {
    "end": 3843.92,
    "start": 3835.04,
  },
]
`;

exports[`parses pbf 1`] = `
[
  {
    "end": 189.053,
    "name": "label 1",
    "start": 104.612,
  },
  {
    "end": 476.194,
    "name": "label 2",
    "start": 300.448,
  },
  {
    "end": 704.264,
    "name": "label 3",
    "start": 567.075,
  },
  {
    "end": 855.455,
    "name": "label 4",
    "start": 704.264,
  },
]
`;

exports[`parses pbf 2`] = `
[
  {
    "end": 189.053,
    "name": "label 1",
    "start": 104.612,
  },
  {
    "end": 300.448,
    "name": "label 2",
    "start": 189.053,
  },
  {
    "end": 476.194,
    "name": "label 3",
    "start": 300.448,
  },
  {
    "end": 567.075,
    "name": "label 4",
    "start": 476.194,
  },
  {
    "end": 704.264,
    "name": "label 5",
    "start": 567.075,
  },
  {
    "end": 855.455,
    "name": "label 6",
    "start": 704.264,
  },
]
`;

exports[`parses pbf 3`] = `
[
  {
    "end": 189.053,
    "name": "A",
    "start": 104.612,
  },
  {
    "end": 476.194,
    "name": "B",
    "start": 300.448,
  },
  {
    "end": 704.264,
    "name": "C",
    "start": 567.075,
  },
]
`;

exports[`parses pbf 4`] = `
[
  {
    "end": 189.053,
    "name": "A",
    "start": 104.612,
  },
  {
    "end": 476.194,
    "name": "B",
    "start": 300.448,
  },
]
`;

exports[`parses xmeml - with multiple tracks 1`] = `
[
  {
    "end": 11,
    "start": 0,
  },
  {
    "end": 4.08,
    "start": 0.96,
  },
  {
    "end": 3.88,
    "start": 1.12,
  },
  {
    "end": 4.32,
    "start": 0.84,
  },
  {
    "end": 3.36,
    "start": 0.36,
  },
  {
    "end": 6.24,
    "start": 0.36,
  },
  {
    "end": 4.52,
    "start": 0.24,
  },
  {
    "end": 2.48,
    "start": 0.48,
  },
  {
    "end": 2.36,
    "start": 0.48,
  },
  {
    "end": 1.36,
    "start": 0.36,
  },
  {
    "end": 1.36,
    "start": 0.36,
  },
  {
    "end": 1.04,
    "start": 0.36,
  },
]
`;

exports[`parses xmeml 1 1`] = `
[
  {
    "end": 8.56,
    "start": 0,
  },
  {
    "end": 13.12,
    "start": 8.56,
  },
  {
    "end": 19.12,
    "start": 13.12,
  },
  {
    "end": 27.96,
    "start": 19.12,
  },
  {
    "end": 39.08,
    "start": 27.96,
  },
  {
    "end": 49.36,
    "start": 39.08,
  },
]
`;

exports[`parses xmeml 2 1`] = `
[
  {
    "end": 2033.5666666666666,
    "start": 5.1,
  },
  {
    "end": 3839.2833333333333,
    "start": 3017.7,
  },
  {
    "end": 4686.366666666667,
    "start": 3862.9333333333334,
  },
  {
    "end": 6310.016666666666,
    "start": 5324.066666666667,
  },
  {
    "end": 6959.516666666666,
    "start": 6928.15,
  },
  {
    "end": 8081.116666666667,
    "start": 6985.9,
  },
  {
    "end": 9750.05,
    "start": 8728.066666666668,
  },
  {
    "end": 10545.116666666667,
    "start": 9793.316666666668,
  },
  {
    "end": 10864.883333333333,
    "start": 10740.633333333333,
  },
]
`;
